# PinYinGen

./: CMakeLists.txt  output.txt  readme.txt
examples/: main.cpp
include/: encoding_utils.h  name_generator.h  pinyin_converter.h  pinyin_data.h  pinyin_types.h  pinyingen.h  polyphone_handler.h  tone_handler.h
src/: encoding_utils.cpp  name_generator.cpp  pinyin_converter.cpp  pinyin_data.cpp  polyphone_handler.cpp  tone_handler.cpp
